--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.teepstech.sqlitecrud">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,7 +11,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".UpdateStudentActivity"></activity>
+        <activity
+            android:name=".ApiActivity"
+            android:exported="false" />
+        <activity android:name=".UpdateStudentActivity" />
         <activity android:name=".DeleteStudentActivity" />
         <activity android:name=".AddStudentActivity" />
         <activity android:name=".ViewStudentsActivity" />
